crates/kul-wasm/tests/snapshots/format__example_01_single_couple.snap
---
source: crates/kul-wasm/tests/format.rs
expression: formatted
---
# Example 1: A single couple, no children, marriage ongoing.
# Both persons are documentation roots (no `birth` sub-statement).

person alice  name:"Alice Sharma"  gender:female  born:1950-04-12
person bob    name:"Bob Sharma"    gender:male    born:1948-11-30

marriage m_alice_bob alice bob  start:1972-05-12
