crates/kul-wasm/tests/snapshots/format__example_05_married_siblings.snap
---
source: crates/kul-wasm/tests/format.rs
expression: formatted
---
# Example 5: A couple whose two sons are each themselves married.
# The file is three blocks: the founders' marriage, then one block per
# son keeping each son's marriage adjacent to its spouses.

kul 0.1

person ramesh  name:"Ramesh Sharma"  gender:male    born:1925-03-10
person sita    name:"Sita Sharma"    gender:female  born:1928-07-15

marriage m_ramesh_sita ramesh sita  start:1948-06-10

person arjun  name:"Arjun Sharma"  gender:male    born:1950-04-12
  birth m_ramesh_sita
person priya  name:"Priya Sharma"  gender:female  born:1952-08-19

marriage m_arjun_priya arjun priya  start:1975-11-04

person vikram  name:"Vikram Sharma"  gender:male    born:1955-02-28
  birth m_ramesh_sita
person nisha   name:"Nisha Sharma"   gender:female  born:1957-06-15

marriage m_vikram_nisha vikram nisha  start:1980-03-22
